Fixed saio/container/Dockerfile to at least build ProxyFS
The `go test` of (at least) the iauth package fails due to CentOS 7.4's binutils being too old
- The Dockerfile FROM's centos:7.4.1708
- That image includes binutils 2.24
- A simple `yum install binutils` only gets us to 2.25
- Golang 1.16(.6) now needs binutils 2.26 at a minimum

--- a/saio/container/Dockerfile
+++ b/saio/container/Dockerfile
@@ -162,6 +162,8 @@ RUN chmod 666 /var/log/proxyfsd/proxyfsd.log
 RUN wget -nv $GolangURL
 RUN tar -C /usr/local -xzf $GolangBasename
 
+ENV PATH $PATH:/usr/local/go/bin
+
 RUN yum install -y make fuse
 
 RUN mkdir -p /opt/ProxyFS/GOPATH/src/github.com/NVIDIA
@@ -173,7 +175,7 @@ RUN git checkout $ProxyFS_Version
 RUN cd pfs_middleware  && python setup.py develop
 RUN cd meta_middleware && python setup.py develop
 
-RUN make version pre-generate generate install
+RUN make version generate build
 
 WORKDIR /opt/ProxyFS
 
