--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [IMGR]
-PublicIPAddr:                         127.0.0.1
-PrivateIPAddr:                        127.0.0.1
+PublicIPAddr:                         development
+PrivateIPAddr:                        development
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
 
@@ -12,8 +12,8 @@ RetryRPCAckTrim:                      100ms
 RetryRPCDeadlineIO:                   60s
 RetryRPCKeepAlivePeriod:              60s
 
-RetryRPCCertFilePath:                              # If both RetryRPC{Cert|Key}FilePath are missing or empty,
-RetryRPCKeyFilePath:                               #   non-TLS RetryRPC will be selected; otherwise TLS will be used
+RetryRPCCertFilePath:                             # If both RetryRPC{Cert|Key}FilePath are missing or empty,
+RetryRPCKeyFilePath:                              #   non-TLS RetryRPC will be selected; otherwise TLS will be used
 
 CheckPointInterval:                   10s
 
@@ -40,6 +40,6 @@ InodeTableCacheEvictHighLimit:        10010
 InodeTableMaxInodesPerBPlusTreePage:  2048
 RootDirMaxDirEntriesPerBPlusTreePage: 1024
 
-LogFilePath:                                       # imgr.log
-LogToConsole:                         true         # false
+LogFilePath:                                      # imgr.log
+LogToConsole:                         true        # false
 TraceEnabled:                         false
