--- a/imgr/development.conf
+++ b/imgr/development.conf
@@ -40,6 +40,6 @@ InodeTableCacheEvictHighLimit:        10010
 InodeTableMaxInodesPerBPlusTreePage:  2048
 RootDirMaxDirEntriesPerBPlusTreePage: 1024
 
-LogFilePath:                                      # imgr.log
-LogToConsole:                         true        # false
+LogFilePath:
+LogToConsole:                         true
 TraceEnabled:                         false
