--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [IMGR]
-PublicIPAddr:                         development
-PrivateIPAddr:                        development
+PublicIPAddr:                         imgr
+PrivateIPAddr:                        imgr
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
 
@@ -12,8 +12,8 @@ RetryRPCAckTrim:                      100ms
 RetryRPCDeadlineIO:                   60s
 RetryRPCKeepAlivePeriod:              60s
 
-RetryRPCCertFilePath:                             # If both RetryRPC{Cert|Key}FilePath are missing or empty,
-RetryRPCKeyFilePath:                              #   non-TLS RetryRPC will be selected; otherwise TLS will be used
+RetryRPCCertFilePath:                 cert.pem
+RetryRPCKeyFilePath:                  key.pem
 
 CheckPointInterval:                   10s
 
