--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -34,6 +34,8 @@ SwiftRetryLimit:                      4
 SwiftTimeout:                         10m
 SwiftConnectionPoolSize:              128
 
+ParallelObjectDeleteMax:              10
+
 InodeTableCacheEvictLowLimit:         10000
 InodeTableCacheEvictHighLimit:        10010
 
