--- a/ihtml/make-static-content/Makefile
+++ b/ihtml/make-static-content/Makefile
@@ -1,6 +1,9 @@
 # Copyright (c) 2015-2021, NVIDIA CORPORATION.
 # SPDX-License-Identifier: Apache-2.0
 
-gosubdir := github.com/NVIDIA/proxyfs/imgr/imgrpkg
+gosubdir := github.com/NVIDIA/proxyfs/ihtml/make-static-content
+
+generatedfiles := \
+	make-static-content
 
 include ../../GoMakefile
