Added configurable output of package fission logging

--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -19,5 +19,6 @@ RetryRPCCACertFilePath:   # Defaults to /dev/null
 LogFilePath:              # Defaults to ""
 LogToConsole:             true
 TraceEnabled:             false
+FUSELogEnabled:           false
 HTTPServerIPAddr:         dev
 HTTPServerPort:           15347
