--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -19,5 +19,6 @@ RetryRPCCACertFilePath:   caCert.pem
 LogFilePath:              # Defaults to ""
 LogToConsole:             true
 TraceEnabled:             false
+FUSELogEnabled:           false
 HTTPServerIPAddr:         iclient
 HTTPServerPort:           15347
