--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -8,9 +8,14 @@ FUSEAllowOther:           true
 FUSEMaxBackground:        1000
 FUSECongestionThreshhold: 0
 FUSEMaxWrite:             131076
-PlugInPath:               iauth-swift.so
-PlugInEnvName:            SwiftAuthBlob
-PlugInEnvValue:           {"AuthURL":"http://swift:8080/auth/v1.0"\u002C"AuthUser":"test:tester"\u002C"AuthKey":"testing"\u002C"Account":"AUTH_test"\u002C"Container":"con"}
+AuthPlugInPath:           iauth-swift.so
+AuthPlugInEnvName:
+AuthPlugInEnvValue:       {"AuthURL":"http://swift:8080/auth/v1.0"\u002C"AuthUser":"test:tester"\u002C"AuthKey":"testing"\u002C"Account":"AUTH_test"\u002C"Container":"con"}
+SwiftRetryDelay:          100ms
+SwiftRetryExpBackoff:     2
+SwiftRetryLimit:          4
+SwiftTimeout:             10m
+SwiftConnectionPoolSize:  128
 RetryRPCPublicIPAddr:     imgr
 RetryRPCPort:             32356
 RetryRPCDeadlineIO:       60s
