Added iclient .conf settings for capping {Shared|Exclusive}Leases and {Read|Write}Cache
With the supplied example settings, the {Read|Write}Cache are each effectively limited to 1GiB

--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -21,6 +21,12 @@ RetryRPCPort:             32356
 RetryRPCDeadlineIO:       60s
 RetryRPCKeepAlivePeriod:  60s
 RetryRPCCACertFilePath:   caCert.pem
+MaxSharedLeases:          500
+MaxExclusiveLeases:       100
+ReadCacheLineSize:        1048576
+ReadCacheLineCountMax:    1024
+FileFlushTriggerSize:     10485760
+FileFlushTriggerDuration: 10s
 LogFilePath:              # Defaults to ""
 LogToConsole:             true
 TraceEnabled:             false
