Adjusted suggested ICLIENT.FUSE{Entry|Attr}ValidDuration from 0s to 250ms
This dramatically cuts down on the number of redundant DoGetAttr() upcalls iclient receives

--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -8,8 +8,8 @@ FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
 FUSEMaxWrite:                     131076
-FUSEEntryValidDuration:           0s
-FUSEAttrValidDuration:            0s
+FUSEEntryValidDuration:           250ms
+FUSEAttrValidDuration:            250ms
 AuthPlugInPath:                   iauth-swift.so
 AuthPlugInEnvName:
 AuthPlugInEnvValue:               {"AuthURL":"http://swift:8080/auth/v1.0"\u002C"AuthUser":"test:tester"\u002C"AuthKey":"testing"\u002C"Account":"AUTH_test"\u002C"Container":"con"}
