--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -8,9 +8,9 @@ FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
 FUSEMaxWrite:                     131076
-FUSEEntryValidDuration:           0s
-FUSEAttrValidDuration:            0s
-AuthPlugInPath:                  iauth/iauth-swift/iauth-swift.so
+FUSEEntryValidDuration:           250ms
+FUSEAttrValidDuration:            250ms
+AuthPlugInPath:                   iauth/iauth-swift/iauth-swift.so
 AuthPlugInEnvName:
 AuthPlugInEnvValue:               {"AuthURL":"http://swift:8080/auth/v1.0"\u002C"AuthUser":"test:tester"\u002C"AuthKey":"testing"\u002C"Account":"AUTH_test"\u002C"Container":"con"}
 SwiftTimeout:                     10m
