Added support for statfs() in iclient (and all the underlying RPCs/mechanisms thru imgr

--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -4,6 +4,7 @@
 [ICLIENT]
 VolumeName:                       testvol
 MountPointDirPath:                /mnt
+FUSEBlockSize:                    512
 FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
