--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -12,8 +12,8 @@ RetryRPCAckTrim:                      100ms
 RetryRPCDeadlineIO:                   60s
 RetryRPCKeepAlivePeriod:              60s
 
-RetryRPCCertFilePath:                             # If both RetryRPC{Cert|Key}FilePath are missing or empty,
-RetryRPCKeyFilePath:                              #   non-TLS RetryRPC will be selected; otherwise TLS will be used
+RetryRPCCertFilePath:
+RetryRPCKeyFilePath:
 
 CheckPointInterval:                   10s
 
