--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -4,6 +4,7 @@
 [ICLIENT]
 VolumeName:                       testvol
 MountPointDirPath:                /mnt
+FUSEBlockSize:                    512
 FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
