Completed inode flush logic in iclient
Also added optional "-f" to format volume in imgr/mkmount.sh & iclient/iclient.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,5 +128,5 @@ services:
         published: 15347
         protocol: tcp
         mode: host
-    command: ["./iclient.sh", "-s"]
+    command: ["./iclient.sh", "-fs"]
  
