--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -8,6 +8,7 @@ FUSEBlockSize:                    512
 FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
+FUSEMaxRead:                      131076
 FUSEMaxWrite:                     131076
 FUSEEntryValidDuration:           250ms
 FUSEAttrValidDuration:            250ms
