[WIP] iclient/iclientpkg/lease.go needs work to handle blocked/unblocked lock requests

--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -36,6 +36,8 @@ ReadCacheLineSize:                1048576
 ReadCacheLineCountMax:            1024
 FileFlushTriggerSize:             10485760
 FileFlushTriggerDuration:         10s
+InodeLockRetryDelay:              10ms
+InodeLockRetryDelayVariance:      50
 LogFilePath:
 LogToConsole:                     true
 TraceEnabled:                     false
