--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -36,6 +36,8 @@ ReadCacheLineSize:                1048576
 ReadCacheLineCountMax:            1024
 FileFlushTriggerSize:             10485760
 FileFlushTriggerDuration:         10s
+InodeLockRetryDelay:              10ms
+InodeLockRetryDelayVariance:      50
 LogFilePath:
 LogToConsole:                     true
 TraceEnabled:                     false
