--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -34,7 +34,7 @@ SwiftRetryLimit:                      4
 SwiftTimeout:                         10m
 SwiftConnectionPoolSize:              128
 
-ParallelObjectDeleteMax:              10
+ParallelObjectDeletePerVolumeLimit:   10
 
 InodeTableCacheEvictLowLimit:         10000
 InodeTableCacheEvictHighLimit:        10010
