Completed functionality... see ickpt/ickptpkg/api.go for documentation

--- a/ickpt/ickpt.conf
+++ b/ickpt/ickpt.conf
@@ -8,8 +8,6 @@ CertFilePath:                         #  TCP: if all of {Cert|Key|CACert}FilePat
 KeyFilePath:                          #   - or -
 CACertFilePath:                       #  TLS: if all of {Cert|Key|CACert}FilePath are present
 DataBasePath:            /tmp/ickptDB # Implicitly created if if non-existent
-SwiftRetryDelay:         100ms
-SwiftRetryExpBackoff:    2
-SwiftRetryLimit:         4
 SwiftTimeout:            10m
 SwiftConnectionPoolSize: 128
+TransactionTimeout:      10s
