--- a/ickpt/dev.conf
+++ b/ickpt/dev.conf
@@ -2,11 +2,11 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [ICKPT]
-IPAddr:                  ickpt
+IPAddr:                  dev
 Port:                    33123
-CertFilePath:            ickpt_cert.pem
-KeyFilePath:             ickpt_key.pem
-CACertFilePath:          ca_cert.pem
+CertFilePath:
+KeyFilePath:
+CACertFilePath:
 DataBasePath:            /tmp/ickptDB
 SwiftTimeout:            10m
 SwiftConnectionPoolSize: 128
