--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -1,4 +1,4 @@
-# Copyright (c) 2015-2021, NVIDIA CORPORATION.
+# Copyright (c) 2015-2022, NVIDIA CORPORATION.
 # SPDX-License-Identifier: Apache-2.0
 
 [ICLIENT]
@@ -25,7 +25,7 @@ RetryRPCPublicIPAddr:             imgr
 RetryRPCPort:                     32356
 RetryRPCDeadlineIO:               60s
 RetryRPCKeepAlivePeriod:          60s
-RetryRPCCACertFilePath:           caCert.pem
+RetryRPCCACertFilePath:           ca_cert.pem
 MaxSharedLeases:                  500
 MaxExclusiveLeases:               100
 InodePayloadEvictLowLimit:        100000
