--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -1,4 +1,4 @@
-# Copyright (c) 2015-2021, NVIDIA CORPORATION.
+# Copyright (c) 2015-2022, NVIDIA CORPORATION.
 # SPDX-License-Identifier: Apache-2.0
 
 [IMGR]
@@ -12,8 +12,8 @@ RetryRPCAckTrim:                      100ms
 RetryRPCDeadlineIO:                   60s
 RetryRPCKeepAlivePeriod:              60s
 
-RetryRPCCertFilePath:                 cert.pem
-RetryRPCKeyFilePath:                  key.pem
+RetryRPCCertFilePath:                 imgr_cert.pem
+RetryRPCKeyFilePath:                  imgr_key.pem
 
 CheckPointInterval:                   10s
 
