Added ickpt-referencing Config settings to imgr

--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -7,6 +7,10 @@ PrivateIPAddr:                        imgr
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
 
+CheckPointIPAddrs:                    ickpt
+CheckPointPort:                       33123
+CheckPointCACertFilePath:             ca_cert.pem
+
 RetryRPCTTLCompleted:                 10m
 RetryRPCAckTrim:                      100ms
 RetryRPCDeadlineIO:                   60s
