--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -1,4 +1,4 @@
-# Copyright (c) 2015-2021, NVIDIA CORPORATION.
+# Copyright (c) 2015-2022, NVIDIA CORPORATION.
 # SPDX-License-Identifier: Apache-2.0
 
 [IMGR]
@@ -6,6 +6,10 @@ PublicIPAddr:                         dev
 PrivateIPAddr:                        dev
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
+
+CheckPointIPAddrs:                    dev
+CheckPointPort:                       33123
+CheckPointCACertFilePath:
 
 RetryRPCTTLCompleted:                 10m
 RetryRPCAckTrim:                      100ms
