Added checkPointHTTPClient to imgr globalsStruct
...and renamed httpClient to swiftHTTPClient to distinguish from checkPointHTTPClient

--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -10,6 +10,8 @@ HTTPServerPort:                       15346
 CheckPointIPAddrs:                    ickpt
 CheckPointPort:                       33123
 CheckPointCACertFilePath:             ca_cert.pem
+CheckPointTimeout:                    10m
+CheckPointConnectionPoolSize:         10
 
 RetryRPCTTLCompleted:                 10m
 RetryRPCAckTrim:                      100ms
