--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -10,6 +10,8 @@ HTTPServerPort:                       15346
 CheckPointIPAddrs:                    dev
 CheckPointPort:                       33123
 CheckPointCACertFilePath:
+CheckPointTimeout:                    10m
+CheckPointConnectionPoolSize:         10
 
 RetryRPCTTLCompleted:                 10m
 RetryRPCAckTrim:                      100ms
