Added more retry logic/configs for ickpt requests

--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -10,6 +10,9 @@ HTTPServerPort:                       15346
 CheckPointIPAddrs:                    dev
 CheckPointPort:                       33123
 CheckPointCACertFilePath:
+CheckPointRetryDelay:                 100ms
+CheckPointRetryExpBackoff:            2
+CheckPointRetryLimit:                 4
 CheckPointTimeout:                    10m
 CheckPointConnectionPoolSize:         10
 
