--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -10,6 +10,9 @@ HTTPServerPort:                       15346
 CheckPointIPAddrs:                    ickpt
 CheckPointPort:                       33123
 CheckPointCACertFilePath:             ca_cert.pem
+CheckPointRetryDelay:                 100ms
+CheckPointRetryExpBackoff:            2
+CheckPointRetryLimit:                 4
 CheckPointTimeout:                    10m
 CheckPointConnectionPoolSize:         10
 
