Integrated checkPoint{Read|Write}() into call appropriate callers
1 - only implemented the "empty CheckPointIPAddrs" case(s)
2 - {dev|imgr}.conf temporarily make CheckPointIPAddrs empty (i.e. commented out appropriate values)

--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -7,7 +7,7 @@ PrivateIPAddr:                        dev
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
 
-CheckPointIPAddrs:                    dev
+CheckPointIPAddrs:                    # dev
 CheckPointPort:                       33123
 CheckPointCACertFilePath:
 CheckPointRetryDelay:                 100ms
