--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -7,7 +7,7 @@ PrivateIPAddr:                        imgr
 RetryRPCPort:                         32356
 HTTPServerPort:                       15346
 
-CheckPointIPAddrs:                    ickpt
+CheckPointIPAddrs:                    # ickpt
 CheckPointPort:                       33123
 CheckPointCACertFilePath:             ca_cert.pem
 CheckPointRetryDelay:                 100ms
