Upgraded package fission to support 1MiB reads & writes
...unfortunately reads via dd seem limited to 128KiB still... but fio, curiously, ups that to 256KiB...

--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -8,8 +8,9 @@ FUSEBlockSize:                    512
 FUSEAllowOther:                   true
 FUSEMaxBackground:                1000
 FUSECongestionThreshhold:         0
-FUSEMaxRead:                      131076
-FUSEMaxWrite:                     131076
+FUSEMaxPages:                     256
+FUSEMaxRead:                      1048576
+FUSEMaxWrite:                     1048576
 FUSEEntryValidDuration:           250ms
 FUSEAttrValidDuration:            250ms
 AuthPlugInPath:                   iauth/iauth-swift/iauth-swift.so
