--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -54,3 +54,4 @@ RootDirMaxDirEntriesPerBPlusTreePage: 1024
 LogFilePath:
 LogToConsole:                         true
 TraceEnabled:                         false
+RetryRPCLogEnabled:                   false
