--- a/iclient/dev.conf
+++ b/iclient/dev.conf
@@ -43,5 +43,6 @@ LogFilePath:
 LogToConsole:                     true
 TraceEnabled:                     false
 FUSELogEnabled:                   false
+RetryRPCLogEnabled:               false
 HTTPServerIPAddr:                 dev
 HTTPServerPort:                   15347
