--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -30,6 +30,8 @@ AuthTokenCheckInterval:               1m
 
 FetchNonceRangeToReturn:              100
 
+OpenFileLimit:                        100000
+
 MinLeaseDuration:                     250ms
 LeaseInterruptInterval:               250ms
 LeaseInterruptLimit:                  20
