--- a/iclient/iclient.conf
+++ b/iclient/iclient.conf
@@ -13,6 +13,7 @@ FUSEMaxRead:                      1048576
 FUSEMaxWrite:                     1048576
 FUSEEntryValidDuration:           250ms
 FUSEAttrValidDuration:            250ms
+FUSENameLenMax:                   1024
 AuthPlugInPath:                   iauth-swift.so
 AuthPlugInEnvName:
 AuthPlugInEnvValue:               {"AuthURL":"http://swift:8080/auth/v1.0"\u002C"AuthUser":"test:tester"\u002C"AuthKey":"testing"\u002C"Account":"AUTH_test"\u002C"Container":"con"}
