Impose cap on number of mounts enabled by imgr

--- a/imgr/dev.conf
+++ b/imgr/dev.conf
@@ -30,6 +30,7 @@ AuthTokenCheckInterval:               1m
 
 FetchNonceRangeToReturn:              100
 
+MountLimit:                           10000
 OpenFileLimit:                        100000
 
 MinLeaseDuration:                     250ms
