--- a/imgr/imgr.conf
+++ b/imgr/imgr.conf
@@ -30,6 +30,7 @@ AuthTokenCheckInterval:               1m
 
 FetchNonceRangeToReturn:              100
 
+MountLimit:                           10000
 OpenFileLimit:                        100000
 
 MinLeaseDuration:                     250ms
